Added a feature to the unmute button in index.css so that the button is red when disabled, for example when the bot is reading a response to a user's query
Signed-off-by: Sven Chilton <sven.chilton@gmail.com>

--- a/virtual-assistant-chatgpt/client/webapplication/ui/static/stylesheets/index.css
+++ b/virtual-assistant-chatgpt/client/webapplication/ui/static/stylesheets/index.css
@@ -311,6 +311,11 @@ input[type="color"]:focus,
   color: white;
 }
 
+#unmuteButton:disabled {
+  background-color: #bc0404;
+  color: white;
+}
+
 #submit {
   background-color: #78bc04;
 }
